--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   device_preview: ^1.1.0
+  flutter_staggered_grid_view: ^0.6.2
 
 
   # The following adds the Cupertino Icons font to your application.
